Add dashboard user to postgres

--- a/roles/manager/files/config/postgresql/pg_hba.conf
+++ b/roles/manager/files/config/postgresql/pg_hba.conf
@@ -85,9 +85,9 @@
 local   all             postgres                                peer
 
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
-host    pacsocial  	pacsocial  	104.131.176.27/32  	md5
-host    pacsocial  	pacsocial  	127.0.0.1/32  		md5
-host    postgres  	pacsocial  	127.0.0.1/32  		md5
+host    all  	        pacsocial  	104.131.176.27/32  	md5
+host    all  	        pacsocial  	127.0.0.1/32  		md5
+host    all  	        dashboard  	127.0.0.1/32  		md5
 
 # "local" is for Unix domain socket connections only
 local   all             all                                     trust
