--- a/roles/manager/tasks/main.yml
+++ b/roles/manager/tasks/main.yml
@@ -115,14 +115,14 @@
     - smisc
 
 # this changes every time. broken? archivce=no maybe it is changing permissions
-#- name: Synchronize php-fpm config
-#  synchronize: src=config/php/{{ item }} dest=/etc/php5/fpm/{{ item }} archive=no
-#  with_items:
-#    - pool.d/www.conf
-#    - php.ini
-#    - php-fpm.conf
-#  notify:
-#    - reload php
+- name: Synchronize php-fpm config
+  synchronize: src=config/php/{{ item }} dest=/etc/php5/fpm/{{ item }} archive=no
+  with_items:
+    - pool.d/www.conf
+    - php.ini
+    - php-fpm.conf
+  notify:
+    - reload php
 
 - name: Synchronize monit scripts
   synchronize: src=config/monit/ dest=/etc/monit/ group=no owner=no perms=no recursive=yes
