Turn up the duration to 60m becuase the first run may take a while

--- a/roles/manager/files/config/smisc.ini
+++ b/roles/manager/files/config/smisc.ini
@@ -45,11 +45,11 @@ secrets: YmFhh7c3yr4AwmMtmodNm6MFc2lq60bv6qZanJqSWYbpxAPALC
 [postgres]
 username = pacsocial
 password = 1234qwer
-host = 104.131.176.27
+host = smisc.jacobgreenleaf.com
 port = 5432
 database = pacsocial
 
 [redis]
-host = 104.131.176.27
+host = smisc.jacobgreenleaf.com
 port = 6379
 database = 0
