--- a/roles/manager/tasks/main.yml
+++ b/roles/manager/tasks/main.yml
@@ -220,13 +220,13 @@
     - hot
 
 - name: turn on the follower scraper job
-  cron: name="follower scraper" state=present minute="*" hour="*" day="*" month="*" job="timeout 60m python3 /usr/local/src/smisc/app.py followers"
+  cron: name="follower scraper" state=present minute="*" hour="*" day="*" month="*" job="python3 /usr/local/src/smisc/app.py followers"
 
 - name: turn on the competition tweets scraper scraper job
-  cron: name="competition tweets scraper" state=present minute="*" hour="*" day="*" month="*" job="timeout 60m python3 /usr/local/src/smisc/app.py competition-tweets"
+  cron: name="competition tweets scraper" state=present minute="*" hour="*" day="*" month="*" job="python3 /usr/local/src/smisc/app.py competition-tweets"
 
 - name: turn on the info scraper job
-  cron: name="info scraper" state=present minute="*/5" hour="*" day="*" month="*" job="timeout 60m python3 /usr/local/src/smisc/app.py info"
+  cron: name="info scraper" state=present minute="0,30" hour="*" day="*" month="*" job="python3 /usr/local/src/smisc/app.py info"
 
 #- name: turn on the daily backup job
 #  cron: name="hourly backups" state=present minute="0" hour="0" day="*" month="*" job="python3 /usr/local/bin/smisc-backup.py"
