--- a/provision/ansible-development.cfg
+++ b/provision/ansible-development.cfg
@@ -1,9 +1,9 @@
 [defaults]
-hostfile = ../.vagrant/provisioners/ansible/inventory/vagrant_ansible_inventory
-transport = ssh
+hostfile = development
+# transport = ssh
 private_key_file=~/.vagrant.d/insecure_private_key
 remote_user = vagrant
 
 [ssh_connection]
 ssh_args = -o ForwardAgent=yes
-pipelining = True
+# pipelining = True
