--- a/provision/roles/manager/tasks/main.yml
+++ b/provision/roles/manager/tasks/main.yml
@@ -54,6 +54,7 @@
     - redis-server
     - php5-dev
     - php5-mcrypt
+    - rsync
 
 - name: install PHP PEAR modules
   command: pecl install redis
@@ -82,7 +83,7 @@
     - boto
 
 - name: Synchronize nginx configuration
-  synchronize: src=config/nginx/ dest=/etc/nginx/ delete=yes
+  synchronize: src=config/nginx/ dest=/etc/nginx/ delete=yes rsync_path="sudo rsync"
   notify: 
     - reload nginx
   tags:
@@ -95,28 +96,28 @@
   sysctl: name=kernel.shmall value=2097152 sysctl_set=yes
 
 - name: Synchronize PostgreSQL configuration
-  synchronize: src=config/postgresql/ dest=/etc/postgresql/9.1/main/
+  synchronize: src=config/postgresql/ dest=/etc/postgresql/9.1/main/ rsync_path="sudo rsync"
   notify:
     - reload postgresql
 
 - name: Synchronize redis configuration
-  synchronize: src=config/redis/ dest=/etc/redis/
+  synchronize: src=config/redis/ dest=/etc/redis/ rsync_path="sudo rsync"
   notify:
     - reload redis
 
 - name: Synchronize backup script
-  synchronize: src=scripts/backup.py dest=/usr/local/bin/smisc-backup.py
+  synchronize: src=scripts/backup.py dest=/usr/local/bin/smisc-backup.py rsync_path="sudo rsync"
   tags:
     - smisc
 
 - name: Synchronize init scripst
-  synchronize: src=config/initscripts/ dest=/etc/init.d/ delete=no
+  synchronize: src=config/initscripts/ dest=/etc/init.d/ delete=no rsync_path="sudo rsync"
   tags:
     - smisc
 
 # this changes every time. broken? archivce=no maybe it is changing permissions
 - name: Synchronize php-fpm config
-  synchronize: src=config/php/{{ item }} dest=/etc/php5/fpm/{{ item }} archive=no
+  synchronize: src=config/php/{{ item }} dest=/etc/php5/fpm/{{ item }} archive=no rsync_path="sudo rsync"
   with_items:
     - pool.d/www.conf
     - php.ini
@@ -125,25 +126,25 @@
     - reload php
 
 - name: Synchronize monit scripts
-  synchronize: src=config/monit/ dest=/etc/monit/ group=no owner=no perms=no recursive=yes
+  synchronize: src=config/monit/ dest=/etc/monit/ group=no owner=no perms=no recursive=yes rsync_path="sudo rsync"
   notify:
      - reload monit
   tags:
     - monit
 
 - name: Deploy smisc code
-  synchronize: src=src/ dest=/usr/local/src/smisc/
+  synchronize: src=src/ dest=/usr/local/src/smisc/ rsync_path="sudo rsync"
   tags: 
     - smisc
     - hot
 
 - name: Synchronize phpPgAdmin
-  synchronize: src=pgsql/ dest=/usr/local/src/{{ domain }}/sql group=no owner=no perms=no recursive=yes delete=yes
+  synchronize: src=pgsql/ dest=/usr/local/src/{{ domain }}/sql group=no owner=no perms=no recursive=yes delete=yes rsync_path="sudo rsync"
   tags:
     - smisc
 
 - name: Synchronize dashboard code
-  synchronize: src=dashboard/ dest=/usr/local/src/{{ domain }}/dashboard group=no owner=no perms=no recursive=yes delete=yes
+  synchronize: src=dashboard/ dest=/usr/local/src/{{ domain }}/dashboard group=no owner=no perms=no recursive=yes delete=yes rsync_path="sudo rsync"
   tags:
     - smisc
     - hot
@@ -181,10 +182,13 @@
   command: psql -c 'grant select on all tables in schema "public" to pacsocial' dashboard postgres 
 
 - name: Deploy smisc configuration
-  synchronize: src=config/smisc.ini dest=/usr/local/share/smisc.ini
+  synchronize: src=config/smisc.ini dest=/usr/local/share/smisc.ini rsync_path="sudo rsync"
   tags: 
     - smisc
     - hot
+
+- name: generate keys
+  include: generate_keys.yml
 
 - name: Ensure files have the proper mode and owner
   file: path={{ item.src }} owner={{ item.owner | default("root") }} mode={{ item.mode | default(0700) }}
