--- a/provision/roles/manager/tasks/main.yml
+++ b/provision/roles/manager/tasks/main.yml
@@ -253,8 +253,11 @@
     - postgresql
     - hot
 
-- name: turn on the follower scraper job
-  cron: state=present name="follower scraper" minute="*" hour="*" day="*" month="*" job="/usr/local/bin/python3.4 /usr/local/src/smisc/app.py followers"
+- name: turn on the wide follower scraper job
+  cron: state=present name="wide follower scraper" minute="*" hour="*" day="*" month="*" job="/usr/local/bin/python3.4 /usr/local/src/smisc/app.py followers_wide"
+
+- name: turn on the bot follower scraper job
+  cron: state=present name="bot follower scraper" minute="*" hour="*" day="*" month="*" job="/usr/local/bin/python3.4 /usr/local/src/smisc/app.py followers_bot"
 
 - name: turn on the competition tweets scraper scraper job
   cron: state=present name="competition tweets scraper" minute="*" hour="*" day="*" month="*" job="/usr/local/bin/python3.4 /usr/local/src/smisc/app.py competition-tweets"
