--- a/provision/stop.yml
+++ b/provision/stop.yml
@@ -7,7 +7,8 @@
       cron: name="{{ item }}" state=absent
       with_items: 
         - channel scraper
-        - follower scraper
+        - bot follower scraper v2
+        - wide follower scraper
         - competition tweets scraper
         - info scraper
         - backups
