--- a/provision/roles/manager/files/config/postgresql/pg_hba.conf
+++ b/provision/roles/manager/files/config/postgresql/pg_hba.conf
@@ -87,7 +87,8 @@ local   all             postgres                                peer
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 host    all  	        pacsocial  	104.131.176.27/32  	md5
 host    all  	        pacsocial  	127.0.0.1/32  		md5
-host    all  	        dashboard  	127.0.0.1/32  		md5
+host    all  	        pacsocial  	::1/128  		    md5
+host    all  	        dashboard  	::1/128  		    md5
 
 # "local" is for Unix domain socket connections only
 local   all             all                                     trust
