Turn backups back on

--- a/provision/roles/manager/tasks/main.yml
+++ b/provision/roles/manager/tasks/main.yml
@@ -288,7 +288,7 @@
   cron: state=present name="info scraper" minute="0,30" hour="*" day="*" month="*" job="/usr/local/bin/python3.4 /usr/local/src/smisc/app.py info"
 
 - name: turn on the daily backup job
-  cron: state=absent name="backup" minute="*" hour="*" day="*" month="*" job="/usr/local/bin/python3.4 /usr/local/src/smisc/app.py backup"
+  cron: state=present name="backup" minute="*" hour="*" day="*" month="*" job="/usr/local/bin/python3.4 /usr/local/src/smisc/app.py backup"
 
 - name: turn on the scoring job
   cron: state=present name="score" minute="*" hour="*" day="*" month="*" job="/usr/local/bin/python3.4 /usr/local/src/smisc/app.py scoring"
