--- a/provision/roles/manager/handlers/main.yml
+++ b/provision/roles/manager/handlers/main.yml
@@ -8,3 +8,5 @@
   service: name=php5-fpm state=reloaded
 - name: reload monit
   service: name=monit state=reloaded
+- name: restart influxdb
+  service: name=influxdb state=restarted
