--- a/provision/roles/manager/tasks/main.yml
+++ b/provision/roles/manager/tasks/main.yml
@@ -32,9 +32,13 @@
     - deb http://http.debian.net/debian wheezy main contrib non-free
     - deb-src http://http.debian.net/debian wheezy main contrib non-free
 
+- name: update apt
+  apt: update_cache=yes
+
 - name: install base packages
-  apt: name={{ item }} state=latest
+  apt: name={{ item }} state=latest force=yes
   with_items: 
+    - curl
     - ntp
     - vim
     - python3-pip
