Add 5-node cluster commands; add cluster admin commands

--- a/provision/site.yml
+++ b/provision/site.yml
@@ -1,4 +1,13 @@
 ---
 - hosts: database
+  sudo: yes
   roles: 
     - database
+- hosts: cassandra-base
+  sudo: yes
+  roles: 
+    - cassandra-base
+- hosts: cassandra-admin
+  sudo: yes
+  roles:
+    - cassandra-base
