--- a/provision/ansible-production.cfg
+++ b/provision/ansible-production.cfg
@@ -1,6 +1,7 @@
 [defaults]
 hostfile = production
 remote_user = root
+host_key_checking = False
 
 [ssh_connection]
 ssh_args = -o ForwardAgent=yes
