--- a/provision/roles/ganglia-master/templates/gmetad.conf
+++ b/provision/roles/ganglia-master/templates/gmetad.conf
@@ -41,8 +41,9 @@
 # data_source "my grid" 50 1.3.4.7:8655 grid.org:8651 grid-backup.org:8651
 # data_source "another source" 1.3.4.7:8655  1.3.4.8
 
-data_source "www" 30 localhost
-data_source "cassandra" 30 {% for host in groups['cassandra-node'] %} {{ host }} {% endfor %}
+data_source "smisc" 30 localhost
+# data_source "www" 30 smisc.jacobgreenleaf.com
+# data_source "cassandra" 30 cassandra1.jacobgreenleaf.com
 
 #
 # Round-Robin Archives
