--- a/provision/roles/database/files/nginx.conf
+++ b/provision/roles/database/files/nginx.conf
@@ -4,7 +4,7 @@ server {
 	root /usr/local/src/smisc;
 	index index.html index.php;
 
-	server_name smisc.jacobgreenleaf.com;
+	server_name smisc-ganglia.jacobgreenleaf.com smisc.jacobgreenleaf.com;
 
 	location / {
 		# First attempt to serve request as file, then
@@ -18,6 +18,22 @@ server {
 		fastcgi_index index.php;
 		include fastcgi_params;
 	}
+}
+
+server {
+	server_name smisc-api.jacobgreenleaf.com;
+
+	root /usr/local/share/smisc-api/local/src;
+	index index.html index.htm;
+
+	location / {
+		try_files $uri @app;
+	}
+
+    location @app {
+        include uwsgi_params;
+        uwsgi_pass unix:/var/run/uwsgi.sock;
+    }
 }
 
 # another virtual host using mix of IP-, name-, and port-based configuration
